# a2a-langgraph

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  compose.yaml  docker-compose.yaml  docker-compose.yml  pyproject.toml
agents/analysis/: Dockerfile  pyproject.toml  requirements.txt
agents/analysis/src/analysis/: __main__.py  agent.py  card.py  graph.py
agents/knowledge/: Dockerfile  pyproject.toml  requirements.txt
agents/knowledge/src/knowledge/: __main__.py  agent.py  card.py  graph.py
agents/orchestrator/: Dockerfile  pyproject.toml  requirements.txt
agents/orchestrator/src/orchestrator/: __main__.py  agent.py  card.py  graph.py
apps/chat-ui/: package.json  pnpm-lock.yaml
apps/chat-ui/app/: layout.tsx  runtime.tsx
apps/chat-ui/components/assistant-ui/: thread.tsx
apps/chat-ui/test/: dockerization.test.mjs
apps/web/: Dockerfile  package-lock.json  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/chat/: route.ts
docs/: ARCHITECTURE.md  HISTORY.md  STEPS.md  SYSTEM.md  a2a-architecture-remediation-plan.md
docs/ai/: CODING_STANDARDS.md  EVIDENCE_RULES.md
environments/: README.md
environments/local/: generate-ca.sh
environments/local/certs/: .gitignore  ca.crt
infra/agentgateway/: config.yaml
infra/agentregistry/: Dockerfile
infra/auth/: config.yaml
infra/postgres/: init.sql
platform/agents/bastion/: .dockerignore  Dockerfile  README.md  pyproject.toml
platform/agents/bastion/src/bastion/: server.py
platform/agents/bastion/src/bastion_agent/: __init__.py  __main__.py  executor.py  server.py
platform/agents/bastion/tests/: test_bastion_stub.py  test_dockerization.py
tests/: test_units.py
