[project]
name = "a2a-langgraph"
version = "0.1.0"
description = "Coordinator-pattern multi-agent system that produces a reasoned, viable research thesis."
requires-python = ">=3.12,<3.13"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
thesis-common = { workspace = true }
agent-coordinator = { workspace = true }
agent-researcher = { workspace = true }
agent-critic = { workspace = true }
agent-synthesizer = { workspace = true }
mcp-arxiv = { workspace = true }
thesis-cli = { workspace = true }

# Convenience: installing the root brings in every workspace member.
[dependency-groups]
dev = [
    "agent-coordinator",
    "agent-researcher",
    "agent-critic",
    "agent-synthesizer",
    "mcp-arxiv",
    "thesis-cli",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]
