[project]
name = "a2a-langgraph"
version = "0.1.0"
description = "Coordinator-pattern multi-agent system that produces a reasoned, viable research thesis."
requires-python = ">=3.12,<3.13"

[tool.uv.workspace]
members = [
    "packages/cli",
    "packages/core/*",
    "packages/services/agentic/researcher/*",
]

[tool.uv.sources]
contracts = { workspace = true }
config = { workspace = true }
observability = { workspace = true }
llm = { workspace = true }
thesis-contracts = { workspace = true }
thesis-config = { workspace = true }
a2a-core = { workspace = true }
agent-coordinator = { workspace = true }
agent-librarian = { workspace = true }
agent-critic = { workspace = true }
agent-synthesizer = { workspace = true }
mcp-arxiv = { workspace = true }
thesis-cli = { workspace = true }

# Convenience: installing the root brings in every workspace member.
[dependency-groups]
dev = [
    "agent-coordinator",
    "agent-librarian",
    "agent-critic",
    "agent-synthesizer",
    "mcp-arxiv",
    "mypy>=1.16",
    "thesis-cli",
    "pytest>=8",
    "pytest-asyncio>=0.24",
]
